// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option renders OptionGroup Correctly 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 1.4rem;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1a1a1a;
  padding: 0.7rem 1.4rem;
  border: 0.1rem solid transparent;
  cursor: default;
  overflow: hidden;
  background-color: #ffffff;
}

.c2:active {
  border: 0.1rem solid #5ab2f2;
  box-shadow: 0 0 0.2rem #0066ff;
  z-index: 1;
}

.c2:hover {
  background-color: #f2f2f2;
}

.c1 {
  font-size: 1.2rem;
  line-height: 1.8rem;
  color: #808080;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: initial;
}

<div
    class="c0"
  >
    <span
      class="c1"
    >
      SOME ITEMS
    </span>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c0"
        >
          <span
            class="c4"
          >
            Option 1
          </span>
          <span
            class="c1"
          >
            Kimetsu no Yaiba
          </span>
        </div>
      </div>
      <div
        class="c5"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c0"
        >
          <span
            class="c4"
          >
            Option 2
          </span>
          <span
            class="c1"
          >
            Kimetsu no Yaiba
          </span>
        </div>
      </div>
      <div
        class="c5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Option renders basic Option correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.4rem;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1a1a1a;
  padding: 0.7rem 1.4rem;
  border: 0.1rem solid transparent;
  cursor: default;
  overflow: hidden;
  background-color: #ffffff;
}

.c0:active {
  border: 0.1rem solid #5ab2f2;
  box-shadow: 0 0 0.2rem #0066ff;
  z-index: 1;
}

.c0:hover {
  background-color: #f2f2f2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c2 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: initial;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Tanjiro
      </span>
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    />
  </div>
</DocumentFragment>
`;

exports[`Option renders disabled option correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.4rem;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1a1a1a;
  padding: 0.7rem 1.4rem;
  border: 0.1rem solid transparent;
  cursor: default;
  overflow: hidden;
  background-color: #ffffff;
  cursor: not-allowed;
  opacity: 0.6;
}

.c0:active {
  pointer-events: none;
}

.c4 {
  font-size: 1.2rem;
  line-height: 1.8rem;
  color: #808080;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: initial;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Nezuko
        </span>
        <span
          class="c4"
        >
          this is the option description
        </span>
      </div>
    </div>
    <div
      class="c5"
    />
  </div>
</DocumentFragment>
`;

exports[`Option renders icons and avatar with correct alignment  1`] = `
<DocumentFragment>
  .c3 {
  width: 24px;
  height: 24px;
  overflow: hidden;
  border-radius: 50%;
  outline: none;
  cursor: pointer;
  color: #1a1a1a;
  font-size: calc(1.4 * 24px / 2.4);
  line-height: calc(2.0 * 24px / 2.4);
  -webkit-mask-image: radial-gradient(white,black);
  mask-image: radial-gradient(white,black);
  background: #f2f2f2;
  border: 1px solid #f2f2f2;
}

.c3 img {
  width: 24px;
  height: 24px;
  margin: 0;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: -webkit-transform 120ms;
  -webkit-transition: transform 120ms;
  transition: transform 120ms;
}

.c3 svg {
  margin: 0;
}

.c3 svg path {
  fill: transparent;
}

.c3:hover {
  background: #e6e6e6;
  border: 1px solid #e6e6e6;
}

.c3:hover img {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c3:hover svg path {
  fill: transparent;
}

.c3:focus,
.c3:active {
  background: #e6e6e6;
  border: 1px solid #5ab2f2;
  box-shadow: 0px 0px 2px #0066ff;
}

.c3:focus svg path,
.c3:active svg path {
  fill: transparent;
}

.c3:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c3:disabled img {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c9 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  font-size: 1.4rem;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1a1a1a;
  padding: 0.7rem 1.4rem;
  border: 0.1rem solid transparent;
  cursor: default;
  overflow: hidden;
  background-color: #ffffff;
}

.c0:active {
  border: 0.1rem solid #5ab2f2;
  box-shadow: 0 0 0.2rem #0066ff;
  z-index: 1;
}

.c0:hover {
  background-color: #f2f2f2;
}

.c6 {
  font-size: 1.2rem;
  line-height: 1.8rem;
  color: #808080;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c5 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: initial;
}

.c8 {
  margin-right: 0;
  margin-left: 1.5rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8:first-child {
  margin-left: 0;
}

.c2 {
  margin-right: 1.5rem;
  margin-left: 0;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c2:first-child {
  margin-left: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <button
        class="c2 c3"
        data-testid="avatar"
        title="anshumankun"
      >
        A
      </button>
      <div
        class="c4"
      >
        <span
          class="c5"
        >
          Option 1
        </span>
        <span
          class="c6"
        >
          Kimetsu no Yaiba
        </span>
      </div>
    </div>
    <div
      class="c7"
    >
      <span
        class="c8 c9"
        height="18px"
        type="oClose"
        width="18px"
      >
        <svg
          fill="#000"
          height="18px"
          viewBox="0 0 24 24"
          width="18px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Option renders selected option correctly and fires onClick 1`] = `
<DocumentFragment>
  .c6 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  font-size: 1.4rem;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1a1a1a;
  padding: 0.7rem 1.4rem;
  border: 0.1rem solid transparent;
  cursor: default;
  overflow: hidden;
  background-color: #f2f2f2;
}

.c0:active {
  border: 0.1rem solid #5ab2f2;
  box-shadow: 0 0 0.2rem #0066ff;
  z-index: 1;
}

.c0:hover {
  background-color: #f2f2f2;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: initial;
}

.c5 {
  margin-right: 0;
  margin-left: 1.5rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:first-child {
  margin-left: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Nezuko
        </span>
      </div>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5 c6"
        height="18px"
        type="oCheck"
        width="18px"
      >
        <svg
          fill="#000"
          height="18px"
          viewBox="0 0 24 24"
          width="18px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.00003 16.17L4.83003 12L3.41003 13.41L9.00003 19L21 6.99997L19.59 5.58997L9.00003 16.17Z"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
